src/components/layout.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
* {
  box-sizing: border-box;
}
*:before {
  box-sizing: border-box;
}
*:after {
  box-sizing: border-box;
}
html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  overflow-y: scroll;
}
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: url('../images/background.svg') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.wrapper {
  min-height: 72vh;
}

footer {
  background: url('../images/footerv2.svg'); 
  background-size: cover;
  position: relative;
  color: white;
  min-height: 20vh;
  /* position:absolute;*/
  bottom:0;
  width:105%;
}

header {
  text-align: center;
  color: white;
  font-family: 'Press Start 2P';
}

header a {
   color: white;
}

header a:hover 
{
  color: white; 
  cursor: pointer;  
}

h2 {
  padding-top: 30px;
  padding-bottom: 0px;
}

